# graft

./: .gitignore  .markdownlint.jsonc  .taplo.toml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  book.toml  codecov.yml  config.example.toml  deny.toml  flake.nix  go.mod  package-lock.json  package.json  wrangler.jsonc
.github/: copilot-instructions.md
crates/graft/: Cargo.toml
crates/graft/examples/: generate-schema.rs
crates/graft/schema/: graft-v1.schema.json
crates/graft/src/: cli.rs  lib.rs  main.rs  resolve.rs
crates/graft/src/config/: mod.rs  schema.rs
crates/graft/src/manifest/: canonical.rs  filesystem.rs  mod.rs  schema.rs
crates/graft/src/protocol/: codec.rs  handshake.rs  mod.rs  types.rs
crates/graft/src/worker/: activation.rs  clock.rs  coordinator.rs  discovery.rs  dispatcher.rs  framing.rs  interlock.rs  lifecycle.rs  limits.rs  mod.rs  mutation.rs  observation.rs  protocol.rs  server.rs
crates/graft/tests/: cli.rs  graft_pause.rs  graft_worker.rs  manifest.rs  protocol.rs  schema.rs
docs/: SUMMARY.md  activation.md  agent-update-flow.md  capabilities.md  capability-policy.md  cdi.md  cli.md  closure-scoped-store.md  config.md  container-workflow.md  control-plane.md  dependencies.md  design.md  development.md  filesystem-policy.md  getting-started.md  graph-and-runtime.md  hardening.md  home-manager.md  index.md  lifecycle-operations.md  lifecycle.md  minimal-container.md  name-change.md  network-proxy-security.md  networking.md  nix-worker-integration.md  nixos-module.md  non-goals.md  observability.md  overview.md  quadlet.md  reference.md  roadmap.md  runtime-architecture.md  secure-defaults.md  security-roadmap.md  security.md  supply-chain-update-flow.md  threat-model.md  (+3 more)
examples/: agent-tmux.toml  agent-update.toml  agent.toml  base.toml  home-manager-module.nix  nixos-managed.toml  nixos-module.nix  reference.toml  rootfs-store.toml  secure.toml
extensions/: pi.ts
modules/: nixos.nix  (+1 more)
(+148 files in other folders)
