[package]
name = "graft"
version = "0.2.0-alpha.1"
edition = "2021"
description = "CLI for Graft — NixOS Podman Quadlet containers from TOML"
license = "Apache-2.0"
repository = "https://github.com/Patrick-Kappen/graft"
rust-version = "1.80"

[[bin]]
name = "graft"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# no external mock libraries — manual mocks keep tests self-contained
tempfile = "3"
