[features]
default = []
worker-test-fixtures = []

[package]
name = "graft"
version = "0.3.0-alpha.1"
edition = "2021"
description = "CLI for Graft — NixOS Podman Quadlet containers from TOML"
license = "Apache-2.0"
repository = "https://github.com/Patrick-Kappen/graft"
rust-version = "1.80"

[[bin]]
name = "graft"
path = "src/main.rs"

[[bin]]
name = "graft-worker-fixture"
path = "src/bin/graft-worker-fixture.rs"
required-features = ["worker-test-fixtures"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "=0.10.9"
thiserror = "=2.0.18"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "=1.18.1", default-features = false, features = ["std", "v7"] }
rustix = { version = "=1.1.4", features = ["fs", "net", "process"] }
tokio = { version = "=1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
# no external mock libraries — manual mocks keep tests self-contained
tempfile = "3"
